<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        />

    <Button
        android:id="@+id/aboutDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="323dp"
        android:background="@color/colorPrimary"
        android:onClick="openDeveloperPagePressed"
        android:text="@string/developer_name_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />

    <ImageView
        android:id="@+id/bild"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/hangman_0" />

    <TextView
        android:id="@+id/wordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bild"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/init_word"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/wordToFindTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wordTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                android:text="A" />

            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                android:text="B" />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="C"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="D"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="E"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="F"
                android:layout_marginRight="2dp"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="G"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="H"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="I"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="J"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="K"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="L"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="M"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="N"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="O"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="P"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="Q"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="R"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="S"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="T"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="U"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="V"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="X"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="Y"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="Z"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="Å"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="Ä"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="Ö"
                android:layout_marginRight="2dp"
                android:background="@color/colorPrimary"
                android:onClick="touchLetter"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="150dp"
        android:text="@string/start"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="openMainMenuPressed"/>

</RelativeLayout>
